# siteaudit-ai

./: .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
backend/siteaudit-ai_backend/: siteaudit-ai_backend.slnx
backend/siteaudit-ai_backend/siteaudit-ai_backend/: controller.cpp  controller.h  cors.h  errors.h  server.cpp  siteaudit-ai_backend.cpp  siteaudit-ai_backend.vcxproj  siteaudit-ai_backend.vcxproj.filters
backend/siteaudit-ai_backend/siteaudit-ai_backend/common/: errors.h
backend/siteaudit-ai_backend/siteaudit-ai_backend/controller/: controller.cpp
backend/siteaudit-ai_backend/siteaudit-ai_backend/server/: server.cpp  server.h
backend/siteaudit-ai_backend/siteaudit-ai_backend/service/: ai_service.cpp  ai_service.h  analyze_service.cpp  analyze_service.h  scraper_service.cpp  scraper_service.h
frontend/: gelllostyle.css  toHELL.js  welcomToTheHELL.html
scraper/: scraper.js
